# WorkWatch

./: Dockerfile  README.md  main.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml
Leave_requests/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
Leave_requests/migrations/: 0001_initial.py  0002_alter_leave_request_id_alter_leave_request_user.py  0003_rename_id_leave_request_request_id.py
Leave_requests/templates/Leave_requests/: manager_leave_requests.html  user_leave_requests.html
Users/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
Users/management/commands/: add_admin_accounts.py  populate_employees.py
Users/migrations/: 0001_initial.py  0002_profile_available_leave_profile_force_majeure_leave_and_more.py  0002_remove_profile_is_manager.py  0003_profile_contract_type.py
Users/templates/Users/: add_employee.html  login.html  user_profile_form.html
WorkWatch/: asgi.py  decorators.py  settings.py  urls.py  wsgi.py
schedules/: admin.py  models.py  urls.py  views.py
schedules/migrations/: 0001_initial.py  0002_alter_schedule_date.py
schedules/templates/schedules/: manager_schedules.html  user_schedule.html
static/styles/: app.css
static/uikit/styles/modules/: _button.css  _form.css  _layout.css
templates/: main.html  navbar.html
